Додав форму з імпутами

--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="index.css">
+    <title>Technical task</title>
 </head>
 <body>
-
+<main>
+    <form class="form">
+        <input id="first-name" type="text" placeholder="Name">
+        <input id="last-name" type="text" placeholder="Surname">
+        <input id="email" type="email" placeholder="Email">
+        <input id="password" type="password" placeholder="Password">
+        <button type="submit" id="submit">Submit</button>
+    </form>
+</main>
+<script src="index.js"></script>
 </body>
 </html>
