--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <input id="password" type="password" placeholder="Password">
         <button type="submit" id="submit">Submit</button>
     </form>
+    <div class="result">
+        <h2>Result</h2>
+        <p id="result-text"></p>
+    </div>
 </main>
 <script src="index.js"></script>
 </body>
